# mpclipboard-android

./: .gitignore  Justfile  README.md  settings.gradle.kts
clipboardlib/: build.gradle.kts
clipboardlib/src/debug/java/com/example/shared_clipboard_lib/: StatelessSettingsScreenPreview.kt
clipboardlib/src/main/cpp/: CMakeLists.txt  clipboard_jni.c
clipboardlib/src/main/java/com/example/shared_clipboard_lib/: Connectivity.kt  Form.kt  JniBridge.kt  PollOutput.kt  Poller.kt  RecentMessages.kt  SettingsScreen.kt  SharedClipboard.kt  StatelessSettingsScreen.kt  log.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mpclipboard/: build.gradle.kts
mpclipboard/src/debug/java/org/mpclipboard/mpclipboard/: StatelessConnectivityWidgetPreview.kt  StatelessSettingsScreenPreview.kt
mpclipboard/src/main/cpp/: CMakeLists.txt  clipboard_jni.c
mpclipboard/src/main/java/org/mpclipboard/mpclipboard/: Connectivity.kt  ConnectivityWidget.kt  Form.kt  JniBridge.kt  MPClipboard.kt  PollOutput.kt  Poller.kt  Prefs.kt  RecentMessages.kt  SettingsScreen.kt  SharedClipboard.kt  StatelessConnectivityWidget.kt  StatelessSettingsScreen.kt  log.kt
rustls-platform-verifier-android/rustls/rustls-platform-verifier/: maven-metadata-local.xml
rustls-platform-verifier-android/rustls/rustls-platform-verifier/0.1.1/: _remote.repositories  rustls-platform-verifier-0.1.1.aar
